tests/baselines/reference/varianceAnnotationsWithCircularlyReferencesError.errors.txt
varianceAnnotationsWithCircularlyReferencesError.ts(1,6): error TS2456: Type alias 'T1' circularly references itself.
varianceAnnotationsWithCircularlyReferencesError.ts(1,9): error TS2637: Variance annotations are only supported in type aliases for object, function, constructor, and mapped types.
varianceAnnotationsWithCircularlyReferencesError.ts(1,11): error TS2300: Duplicate identifier '(Missing)'.
varianceAnnotationsWithCircularlyReferencesError.ts(1,11): error TS2637: Variance annotations are only supported in type aliases for object, function, constructor, and mapped types.
varianceAnnotationsWithCircularlyReferencesError.ts(1,12): error TS1359: Identifier expected. 'in' is a reserved word that cannot be used here.
varianceAnnotationsWithCircularlyReferencesError.ts(2,6): error TS2456: Type alias 'T2' circularly references itself.
varianceAnnotationsWithCircularlyReferencesError.ts(2,9): error TS2637: Variance annotations are only supported in type aliases for object, function, constructor, and mapped types.


==== varianceAnnotationsWithCircularlyReferencesError.ts (7 errors) ====
    type T1<in in> = T1 // Error: circularly references 
         ~~
!!! error TS2456: Type alias 'T1' circularly references itself.
            ~~
!!! error TS2637: Variance annotations are only supported in type aliases for object, function, constructor, and mapped types.
              
!!! error TS2300: Duplicate identifier '(Missing)'.
              
!!! error TS2637: Variance annotations are only supported in type aliases for object, function, constructor, and mapped types.
               ~~
!!! error TS1359: Identifier expected. 'in' is a reserved word that cannot be used here.
    type T2<out out> = T2 // Error: circularly references 
         ~~
!!! error TS2456: Type alias 'T2' circularly references itself.
            ~~~~~~~
!!! error TS2637: Variance annotations are only supported in type aliases for object, function, constructor, and mapped types.